Changes for swagger
Signed-off-by: Yash S <119652212+yashmsonkusare@users.noreply.github.com>